<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_red"
    tools:context=".activity.SplashActivity">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/reader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        android:text="@string/reader"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/writer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginEnd="16dp"
        android:gravity="end"
        android:text="@string/writer"
        android:textColor="@color/white"
        android:visibility="gone"
        app:layout_constraintTop_toBottomOf="@+id/reader" />

    <ImageView
        android:id="@+id/news_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/news"
        android:src="@drawable/ic_newspaper_news"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>